tests/errors/client/vo.ts
/* eslint:disable */
// Code generated by gotsrpc https://github.com/foomo/gotsrpc/v2 - DO NOT EDIT.
import * as github_com_foomo_gotsrpc_v2_tests_errors_server from './vo'; // ./client/vo.ts to ./client/vo.ts

// github.com/foomo/gotsrpc/v2/tests/errors/server.ScalarA
export enum ScalarA {
	One = "one",
	Two = "two",
}
// github.com/foomo/gotsrpc/v2/tests/errors/server.ScalarB
export enum ScalarB {
	Four = "four",
	Three = "three",
}
// github.com/foomo/gotsrpc/v2/tests/errors/server.ScalarError
export enum ScalarError {
	ScalarOne = "one",
	ScalarTwo = "two",
}
// github.com/foomo/gotsrpc/v2/tests/errors/server.MultiScalar
export interface MultiScalar {
	ScalarA?:github_com_foomo_gotsrpc_v2_tests_errors_server.ScalarA;
	ScalarB?:github_com_foomo_gotsrpc_v2_tests_errors_server.ScalarB;
}
// github.com/foomo/gotsrpc/v2/tests/errors/server.StructError
export interface StructError {
	message:string;
	data:string;
}
// end of common js